Added sudo code, and HTML markup

--- a/index.html
+++ b/index.html
@@ -9,8 +9,81 @@
 </head>
 <body>
 
-	<h1>Hello World!</h1>
+	<!-- landing page -->
+	<header>
 
+		<h1>In-itiDate</h1>
+		<h2>Your Date Night In</h2>
+
+		<a href="">Plan your date</a>
+	</header>
+
+	<!-- questions page -->
+	<main>
+		<section class="section section1">
+			<form action="#">
+				<input type="radio">
+				<label for=""></label>
+				<input type="radio">
+				<label for=""></label>
+				<input type="radio">
+				<label for=""></label>
+			</form>
+		</section>
+		<section class="section section2">
+			<form action="#">
+				<input type="radio">
+				<label for=""></label>
+				<input type="radio">
+				<label for=""></label>
+				<input type="radio">
+				<label for=""></label>
+			</form>
+		</section>
+		<section class="section section3">
+			<form action="#">
+				<input type="radio">
+				<label for=""></label>
+				<input type="radio">
+				<label for=""></label>
+				<input type="radio">
+				<label for=""></label>
+			</form>
+		</section>
+		<section class="section section4">
+			<form action="#">
+				<input type="radio">
+				<label for=""></label>
+				<input type="radio">
+				<label for=""></label>
+			</form>
+		</section>
+		<button>Submit</button>
+	</main>
+
+	<!-- results -->
+	<section>
+		<!-- drinks result -->
+		<div>
+			<h2></h2>
+
+			<button>Get another drink</button>
+
+		</div>
+
+		<!-- movies result -->
+		<div>
+			<h2></h2>
+
+			<button>Get another movie</button>
+		</div>
+
+		<!-- back to questions -->
+		<button>Plan another date</button>
+	</section>
+
+
+	<script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
 	<script src="public/scripts/main.js"></script>
 </body>
 </html>
