added drink api functionality

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 			<h3>Alcohol?</h3>
 
 			<form action="#">
-				<input type="radio" name="alcohol" id="alcoholic" value="alcoholic">
+				<input type="radio" name="alcohol" id="alcoholic" value="Alcoholic">
 				<label for="alcoholic">Yes, Spirituous</label>
 
-				<input type="radio" name="alcohol" id="non-alcoholic" value="non-alcoholic">
+				<input type="radio" name="alcohol" id="non-alcoholic" value="Non_Alcoholic">
 				<label for="non-alcoholic">No Thanks, Clear Minded</label>
 			</form>
 		</section>
