Displayed additional list info, filtered out empty strings from objects.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		</div>
 
 		<!-- back to questions -->
-		<button>Plan another date</button>
+		<button id="planAnother">Plan another date</button>
 	</section>
 
 
