--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
 <body>
 
 	<!-- landing page -->
-	<header>
-
-		<h1>In-itiDate</h1>
-		<h2>Your Date Night In</h2>
-
-		<a href="">Plan your date</a>
+	<header class="header">
+		<div class="header__container">
+			<div class="header__container__side header__container__left">
+				<h2 class="header__text header__text--left header__text--left--start">in<span>iti</span>
+				</h2>
+				<h2 class="header__text header__text--left header__text--left--end">
+					<span>your</span> date</h2>
+			</div>
+			<div class="header__container__side header__container__right">
+				<h2 class="header__text header__text--right header__text--right--start">date</h2>
+				<h2 class="header__text header__text--right header__text--right--end">
+					<span>night</span> in</h2>
+			</div>
+		</div>
 	</header>
 
 	<!-- questions page -->
@@ -86,7 +94,7 @@
 	</main>
 
 	<!-- results -->
-	<section>
+	<section class="section section--results">
 		<!-- drinks result -->
 		<div class="drinks-result result">
 			<h2></h2>
