--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>My Project</title>
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700%7CSource+Sans+Pro:400,600" rel="stylesheet">
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
 <body>
@@ -13,23 +14,25 @@
 	<header class="header">
 		<div class="header__container">
 			<div class="header__container__side header__container__left">
-				<h2 class="header__text header__text--left header__text--left--start">in<span>iti</span>
+				<h2 class="header__text header__text--left header__text--left--start">In<span>-iti-</span>
 				</h2>
 				<h2 class="header__text header__text--left header__text--left--end">
-					<span>your</span> date</h2>
+					<span>your</span> Date</h2>
 			</div>
 			<div class="header__container__side header__container__right">
-				<h2 class="header__text header__text--right header__text--right--start">date</h2>
+				<h2 class="header__text header__text--right header__text--right--start"> Date</h2>
 				<h2 class="header__text header__text--right header__text--right--end">
-					<span>night</span> in</h2>
+					<span>night</span> In</h2>
 			</div>
 		</div>
+
+		<button href="#section1" class="button--header button">plan your date</button>
 	</header>
 
 	<!-- questions page -->
 	<main>
 		<!-- base/category choosing -->
-		<section class="section section1 cocktail">
+		<section class="section section1 cocktail" id="section1">
 			<h3>What's your relationship status?</h3>
 
 			<form action="#">
