Added movie and movie style to header and html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 	<!-- landing page -->
 	<header class="header">
+		<!-- header video -->
+		<video src="images/movie.mp4" autoplay muted loop id="heroVideo"></video>
+
 		<div class="header__container">
 			<div class="header__container__side header__container__left">
 				<h2 class="header__text header__text--left header__text--left--start">In<span>-iti-</span>
