added animation to main header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 				</h2>
 				<h2 class="header__text header__text--left header__text--left--end">
 					<span>your</span> Date</h2>
-			</div>
+				</div>
+				<h3 class="header__subheader">Movie and a drink</h3>
 			<div class="header__container__side header__container__right">
 				<h2 class="header__text header__text--right header__text--right--start"> Date</h2>
 				<h2 class="header__text header__text--right header__text--right--end">
