Added basic styling to buttons

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
 			<form action="#">
 				<input type="radio" name="category" id="first" value="first">
-				<label for="first">1st Date</label>
+				<label for="first">First Date</label>
 
 				<input type="radio" name="category" id="friends" value="friends">
-				<label for="friends">Just Friends (for now)</label>
+				<label for="friends">It's Complicated</label>
 
 				<input type="radio" name="category" id="relationship" value="relationship">
 				<label for="relationship">In a Relationship</label>
