Added styling to the main body

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
 		<div class="header__container">
 			<div class="header__container__side header__container__left">
-				<h2 class="header__text header__text--left header__text--left--start">In<span>-iti-</span>
+				<h2 class="header__text header__text--left header__text--left--start">in<span>-iti-</span>
 				</h2>
 				<h2 class="header__text header__text--left header__text--left--end">
-					<span>your</span> Date</h2>
+					<span>your</span> date</h2>
 				</div>
-				<h3 class="header__subheader">Movie and a drink</h3>
+				<h3 class="header__subheader">movie and drink</h3>
 			<div class="header__container__side header__container__right">
-				<h2 class="header__text header__text--right header__text--right--start"> Date</h2>
+				<h2 class="header__text header__text--right header__text--right--start"> date</h2>
 				<h2 class="header__text header__text--right header__text--right--end">
-					<span>night</span> In</h2>
+					<span>night</span> in</h2>
 			</div>
 		</div>
 
@@ -57,10 +57,10 @@
 
 			<form action="#">
 				<input type="radio" name="genre" id="convo" value="convo">
-				<label for="convo">Intelligent Conversation</label>
+				<label for="convo">Intelligent Convos</label>
 
 				<input type="radio" name="genre" id="laughs" value="laughs">
-				<label for="laughs">Shared Laughs and Jokes</label>
+				<label for="laughs">Shared Laughs</label>
 
 				<input type="radio" name="genre", id="cuddles" value="cuddles">
 				<label for="cuddles">Cozy Cuddles</label>
@@ -92,7 +92,7 @@
 				<label for="alcoholic">Yes, Spirituous</label>
 
 				<input type="radio" name="alcohol" id="non-alcoholic" value="Non_Alcoholic">
-				<label for="non-alcoholic">No Thanks, Clear Minded</label>
+				<label for="non-alcoholic">No Thanks</label>
 			</form>
 		</section>
 
