some styling for results

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 			</div>
 
-			<button class="another-drink">Get another drink</button>
+			<button class="button another-drink">Get another drink</button>
 
 		</div>
 
@@ -120,7 +120,7 @@
 
 			</div>
 
-			<button class="another-movie">Get another movie</button>
+			<button class="button another-movie">Get another movie</button>
 		</div>
 
 		<!-- back to questions -->
