--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		</section>
 
 		<!-- movie genre choosing -->
-		<section class="section section2 movie">
+		<section class="section section2 movie" id="section2">
 			<h3>What do you want to get out of the date?</h3>
 
 			<form action="#">
@@ -68,7 +68,7 @@
 		</section>
 
 		<!-- movie rating choosing -->
-		<section class="section section3 movie">
+		<section class="section section3 movie" id="section3">
 			<h3>Use 1 word to describe your date.</h3>
 
 			<form action="#">
@@ -84,7 +84,7 @@
 		</section>
 
 		<!-- alcholic/non-alcoholic choosing -->
-		<section class="section section4 cocktail">
+		<section class="section section4 cocktail" id="section4">
 			<h3>Alcohol?</h3>
 
 			<form action="#">
@@ -101,7 +101,7 @@
 	</main>
 
 	<!-- results -->
-	<section class="section section--results">
+	<section class="section section--results" id="section-results">
 		<!-- drinks result -->
 		<div class="drinks-result result">
 			<h2></h2>
@@ -124,7 +124,7 @@
 		</div>
 
 		<!-- back to questions -->
-		<button id="planAnother">Plan another date</button>
+		<button class="button" id="planAnother">Plan another date</button>
 	</section>
 
 
