Finished mobile results styling added favicon

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>My Project</title>
+	<title>InitiDate</title>
+	<!-- load in font awesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+	 crossorigin="anonymous">
+	<!-- load in google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700%7CSource+Sans+Pro:400,600" rel="stylesheet">
+	<!-- load stylesheet -->
 	<link rel="stylesheet" href="public/styles/style.css">
+	<!-- load favicon -->
+	<link rel="shortcut icon" type="image/png" href="./images/logo-fav.png" />
+
+
 </head>
 <body>
 
@@ -104,27 +113,25 @@
 	<section class="section section--results" id="section-results">
 		<!-- drinks result -->
 		<div class="drinks-result result">
-			<h2></h2>
 			<div class="drinks-result__container">
 
 			</div>
 
-			<button class="button another-drink">Get another drink</button>
+			<button class="button another-drink">get another</button>
 
 		</div>
 
 		<!-- movies result -->
 		<div class="movies-result result">
-			<h2></h2>
 			<div class="movies-result__container">
 
 			</div>
 
-			<button class="button another-movie">Get another movie</button>
+			<button class="button another-movie">get another</button>
 		</div>
 
 		<!-- back to questions -->
-		<button class="button" id="planAnother">Plan another date</button>
+		<button id="planAnother">plan another date</button>
 	</section>
 
 
