results, desktop done, animation for logo and logo styling done

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
 	<!-- landing page -->
 	<header class="header">
+		<!-- logo -->
+		<div class="logo-wrapper">
+			<img class="logo" src="images/logo-white.png" alt="Logo">
+			<h1>in<span>-iti-</span>date</h1>
+		</div>
 		<!-- header video -->
 		<video src="images/movie.mp4" autoplay muted loop id="heroVideo"></video>
 
